@@ -167,9 +167,7 @@ void hb_compGenCCode( PHB_FNAME pFileName )       /* generates the C language ou
                  "   #else\n"
                  "      #pragma data_seg( \"XIY\" )\n"
                  "   #endif\n"
-                 "   #pragma warning( disable: 4152 )\n"
-                 "   static void * hb_vm_auto_SymbolInit_%s%s = &hb_vm_SymbolInit_%s%s;\n"
-                 "   #pragma warning( default: 4152 )\n"
+                 "   static HB_$INITSYM hb_vm_auto_SymbolInit_%s%s = hb_vm_SymbolInit_%s%s;\n"
                  "   #pragma data_seg()\n"
                  "#elif ! defined(__GNUC__)\n"
                  "   #pragma startup hb_vm_SymbolInit_%s%s\n"
