@@ -109,9 +109,7 @@ HB_INIT_SYMBOLS_END( dbfcdx1__InitSymbols )
    #else
       #pragma data_seg( "XIY" )
    #endif
-   #pragma warning( disable: 4152 )
-   static void * hb_vm_auto_dbfcdx1__InitSymbols = &dbfcdx1__InitSymbols;
-   #pragma warning( default: 4152 )
+   static HB_$INITSYM hb_vm_auto_dbfcdx1__InitSymbols = dbfcdx1__InitSymbols;
    #pragma data_seg()
 #elif ! defined(__GNUC__)
    #pragma startup dbfcdx1__InitSymbols
