@@ -1,3 +1,14 @@
+20000401-03:20 EST Paul Tucker <ptucker@sympatico.ca>
+   * source/rdd/dbf1.c
+   * source/rdd/sdf1.c
+   * source/rdd/delim1.c
+   * source/rdd/dbfcdx/dbfcdx1.c
+   * source/rdd/dbfntx/dbfntx1.c
+   * source/compiler/genc.c
+   * contrib/rdd_ads/ads1.c
+   * include/hbinit.h
+     * updated initSymbols handling - again
+
 20000401-02:00 EST Paul Tucker <ptucker@sympatico.ca>
    * include/hbvmpub.h
      * turns out msc8 doesn't know pack(push)
